--- a/readme.adoc
+++ b/readme.adoc
@@ -17,6 +17,8 @@ Dotfiles
   Ustas^]
 * https://github.com/webpro/awesome-dotfiles/tree/3cda132a2a8969ad42d8d2246464a86f1315b232#bash[Lars
   Kappert^]
+* https://github.com/herrbischoff/dotpr0n/commit/327f4a45d74b061b5224ce6067874d18b5cd4647#diff-0b5ca119d2be595aa307d34512d9679e49186307ef94201e4b3dfa079aa89938L5-R5[Marcel
+  Bischoff^]
 * https://github.com/mathiasbynens/dotfiles/blob/e42090bf49f860283951041709163653c8a2c522/.aliases[Mathias
   Bynens^]
 * https://github.com/mcornella/dotfiles/blob/e62b0d4c4f18a0373d8a7a1b4ddaa2e21b7f1ffd/zshenv[Marc
