close inline code block with zero-width joiner `&zwj;`

--- a/readme.adoc
+++ b/readme.adoc
@@ -6,7 +6,7 @@ Connect the Dots
 This is a collection of some of the
 https://github.com/search?q=dotfiles[dotfiles^] without which I’dn’t’ve learned
 shell scripting, especially with Bash and Zsh, nor’d’ve I been able to craft my
-own&nbsp;`~/.`s. The repositories that’ve been most helpful are included
+own&nbsp;`~/.`&zwj;s. The repositories that’ve been most helpful are included
 here as&nbsp;submodules.
 
 Dotfiles
