add @TimButters’s dotfiles
for `autocd` and `zstyle`
https://github.com/TimButters/dotfiles/blob/3e03c81fef94d46a7e8f3a63156aa2e928215d4a/zshrc#L46-L50

--- a/readme.adoc
+++ b/readme.adoc
@@ -27,6 +27,8 @@ Dotfiles
   Cornellà^]
 * https://github.com/ferrarimarco/dotfiles/search?q=shellcheck+zsh[Marco
   Ferrari^]
+* https://github.com/TimButters/dotfiles/blob/3e03c81fef94d46a7e8f3a63156aa2e928215d4a/zshrc#L46-L50[Tim
+  Butters^]
 
 License
 ~~~~~~~
