--- a/readme.adoc
+++ b/readme.adoc
@@ -17,6 +17,8 @@ Dotfiles
   Ustas^]
 * https://github.com/gggritso/dotfiles/blob/14218480eb64b884e3a65843f95e5293ae9796dd/gitconfig.symlink#L4-L5#:~:text=unstage%20%3D%20reset%20HEAD%20--[George
   Gritsouk^]
+* https://github.com/wincent/wincent/blob/5f1ea417a6e904ef21a679944a624cbc0d1530a7/aspects/dotfiles/files/.zshrc#L65-L73[Greg
+  Hurrell^]
 * https://github.com/webpro/awesome-dotfiles/tree/3cda132a2a8969ad42d8d2246464a86f1315b232#bash[Lars
   Kappert^]
 * https://github.com/herrbischoff/dotpr0n/commit/327f4a45d74b061b5224ce6067874d18b5cd4647#diff-0b5ca119d2be595aa307d34512d9679e49186307ef94201e4b3dfa079aa89938L5-R5[Marcel
