--- a/readme.adoc
+++ b/readme.adoc
@@ -15,6 +15,8 @@ Dotfiles
   Wayne McCann^]
 * https://github.com/ustasb/dotfiles/commit/da93f0f5b2ef6491d6c2f96e53c29a241d2f82c5#diff-4c2d312ff50ee6b26c2cb601fc96a95eceabe4b456831762e5d6caf41b900383R127-R129[Brian
   Ustas^]
+* https://git.sr.ht/~sircmpwn/dotfiles/tree/730a6d11558f03823c26fbaa8641cc8e96fa7b4b/item/.vimrc[Drew
+  DeVault^]
 * https://github.com/gggritso/dotfiles/blob/14218480eb64b884e3a65843f95e5293ae9796dd/gitconfig.symlink#L4-L5#:~:text=unstage%20%3D%20reset%20HEAD%20--[George
   Gritsouk^]
 * https://github.com/wincent/wincent/blob/5f1ea417a6e904ef21a679944a624cbc0d1530a7/aspects/dotfiles/files/.zshrc#L65-L73[Greg
