add @PaulIrish’s dotfiles
for `.dircolors` https://github.com/paulirish/dotfiles/blob/ccccd0726a8607133fc81115413a934e88e6d0a8/.dircolors

--- a/readme.adoc
+++ b/readme.adoc
@@ -33,6 +33,8 @@ Dotfiles
   Ferrari^]
 * https://github.com/durdn/cfg/blob/0d07c47ced58330e20565c7a45018c61114dfc4c/.gitconfig[Nicola
 Paolucci^]
+* https://github.com/paulirish/dotfiles/blob/ccccd0726a8607133fc81115413a934e88e6d0a8/.dircolors[Paul
+Irish^]
 * https://github.com/TimButters/dotfiles/blob/3e03c81fef94d46a7e8f3a63156aa2e928215d4a/zshrc#L46-L50[Tim
   Butters^]
 
