add @l0b0’s dotfiles (fix #330)
count files with a specific extension, even “hidden files, paths containing spaces, dashes and even newlines”:

    extension="${1:-txt}"
    command find -- . \
      -mindepth 1 \
      -name "*.${extension-}" \
      -exec printf x \; |
      command wc -c
    unset extension

https://en.wikipedia.org/w/?oldid=556414409#Importance_of_forking_in_Unix
https://gitlab.com/victor-engmark/tilde/commit/94413fd483
https://askubuntu.com/a/454568

--- a/readme.adoc
+++ b/readme.adoc
@@ -45,6 +45,8 @@ Dotfiles
   Irish^]
 * https://github.com/TimButters/dotfiles/blob/3e03c81fef94d46a7e8f3a63156aa2e928215d4a/zshrc#L46-L50[Tim
   Butters^]
+* https://gitlab.com/victor-engmark/tilde/commit/94413fd4831ba406a814ee1f3bc7d4839870e1ae[Victor
+  Engmark^]
 * https://github.com/xero/dotfiles/blob/c8fa7984099a71378839d8796553b73f41113e90/bin/bin/gitio[Xero
   Harrison^]
 
