--- a/readme.adoc
+++ b/readme.adoc
@@ -52,6 +52,6 @@ Dotfiles
 
 License
 ~~~~~~~
-On the little content here where I’m the author, it’s released under
-https://github.com/LucasLarson/ConnectTheDots/blob/main/license.adoc[a license]
-bidirectionally compatible with the GNU Affero General Public License v3.
+For the little content here where I’m the author, it’s licensed under any
+https://github.com/LucasLarson/ConnectTheDots/blob/HEAD/license.adoc[GNU Affero
+General Public License^] whose version number is no less than&nbsp;3.0.
